examples/test/testpolicy1205.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1205
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key15: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value27
          key33: value0
          key32: value8
      podSelector:
        matchLabels:
          key24: value49
          key15: value40
          key33: value45
